# Rust

./: .gitignore  README.md
discord-bot-rs-test/: Cargo.toml  run.bat
discord-bot-rs-test/src/: main.rs
eratosthenes/: Cargo.toml  run.bat
eratosthenes/src/: main.rs
gtk3/: Cargo.toml  README.md
gtk3/src/: main.rs  main.ui
happy_numbers/: Cargo.toml  README.md  run.bat
happy_numbers/src/: main.rs
happy_numbers_fast/: Cargo.toml  README.md  run.bat
happy_numbers_fast/src/: main.rs
ra_unsafe/: Cargo.toml
ra_unsafe/src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
