[package]
name = "discord-bot-rs-test"
version = "0.1.0"
authors = ["Vurv78 <Vurv78@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-bot-rs = { git = "https://github.com/Vurv78/discord-bot-rs" }
serde_json = "1.0.62"
serde = { version = "1.0.123", features = ["derive"] }